# py2cdt

./: README.md  py2cdt.py  pyproject.toml
